--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.12.1",
     "react-scripts": "4.0.1",
     "react-uuid": "^1.0.2",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
