--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-modal": "^3.12.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "react-uuid": "^1.0.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
